Add footer in HTML

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
         </div>
       </div>
     </div>
+    <footer>
+      Coded by <a href="https://github.com/jnfol/weather-app">Jessi Follett</a>
+    </footer>
    <script src="src/script.js"></script>
     </script>
   </body>
