Add target for a

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </div>
     <footer>
-      Coded by <a href="https://github.com/jnfol/weather-app">Jessi Follett</a>
+      Coded by <a href="https://github.com/jnfol/weather-app" target="blank">Jessi Follett</a>
     </footer>
    <script src="src/script.js"></script>
     </script>
