Changed formatting of main weather data

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       ></video>
       <div class="card-img-overlay">
         <form class="d-flex" id="city-search">
-                <input
+          <input
             class="form-control me-2"
             type="search"
             placeholder="Enter a city"
@@ -49,15 +49,15 @@
             class="btn btn-outline-light"
             type="submit"
             id="search-button"
-          >
-          <button
-          class="btn btn-outline-light"
-          id="currentLocation">Current Location</button>
+          />
+          <button class="btn btn-outline-light" id="currentLocation">
+            Current Location
+          </button>
         </form>
         <div class="container">
           <div class="row">
             <div class="col-6">
-              <h1 class ="city">Denver</h1>
+              <h1 class="city">Denver</h1>
               <p class="card-text" id="current-date"></p>
               <p class="card-text" id="weather-description"></p>
             </div>
@@ -65,7 +65,11 @@
               <span class="weather">☀</span>
             </div>
             <div class="col-4">
-              <h1 class="mainTemp" id="current-temp">54 <span class="degree" id="C">°C</span> <span class="degree">| </span><span class="degree" id="F">°F</span></h1>
+              <h1 class="mainTemp" id="current-temp">
+                54 <span class="degree" id="C">°C</span>
+                <span class="degree">| </span
+                ><span class="degree" id="F">°F</span>
+              </h1>
               <p class="card-text" id="humidity"></p>
               <p class="card-text" id="wind"></p>
             </div>
@@ -109,9 +113,8 @@
       </div>
     </div>
     <footer>
-      Coded by <a href="https://github.com/jnfol/weather-app" target="blank">Jessi Follett</a>
+      Coded by <a href="https://github.com/jnfol/weather-app">Jessi Follett</a>
     </footer>
-   <script src="src/script.js"></script>
-    </script>
+    <script src="src/script.js"></script>
   </body>
 </html>
