Update HTML for Celsius-Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
             </div>
             <div class="col-3">
               <strong class="mainTemp" id="current-temp"></strong>
-              <span class="unit" id="C">°C </span><span class="unit">|</span
-              ><span class="unit" id="F"> °F</span>
+              <a href="#" class="active" id="C">°C </a
+              ><span class="unit">|</span
+              ><a href="#" class="active" id="F"> °F</a>
 
               <p class="card-text-right" id="precipitation">
                 Precipitation 15%
@@ -125,4 +126,3 @@
     <script src="src/script.js"></script>
   </body>
 </html>
-
