Removed hardcoded forecast HTML

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
               ><span class="unit">|</span
               ><a href="#" class="active" id="F"> °F</a>
 
-             
               <p class="card-text-right">
                 Humidity <span id="humidity"></span>%
               </p>
@@ -80,40 +79,7 @@
             </div>
           </div>
           <hr />
-          <div class="row">
-            <div class="col">
-              <p class="week">
-                Mon <br /><span class="emoji">🌧 </span>
-                <br />
-                <span class="weektemp">47° | 22°</span>
-              </p>
-            </div>
-            <div class="col">
-              <p class="week">
-                Tue <br /><span class="emoji">⛅</span>
-                <br />
-                <span class="weektemp">42° | 24°</span>
-              </p>
-            </div>
-            <div class="col">
-              <p class="week">
-                Wed <br /><span class="emoji">❄</span><br />
-                <span class="weektemp">37° | 25°</span>
-              </p>
-            </div>
-            <div class="col">
-              <p class="week">
-                Thurs <br /><span class="emoji">⛅</span><br />
-                <span class="weektemp">49° | 33°</span>
-              </p>
-            </div>
-            <div class="col">
-              <p class="week">
-                Fri <br /><span class="sun">☀</span><br />
-                <span class="weektemp">59° | 36°</span>
-              </p>
-            </div>
-          </div>
+          <div class="forecast"></div>
         </div>
       </div>
     </div>
