Changed default unit to C in HTML

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </div>
             <div class="col-3">
               <strong class="mainTemp" id="current-temp"></strong>
-              <a href="#" class="active" id="C">°C </a
-              ><span class="unit">|</span
-              ><a href="#" class="active" id="F"> °F</a>
+              <a href="#" class="active" id="F"> °F</a>
+              <span class="unit">|</span
+              ><a href="#" class="active" id="C">°C </a>
 
               <p class="card-text-right">
                 Humidity <span id="humidity"></span>%
