Updated column sizing for main weather data

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
               <p class="card-text" id="current-time"></p>
               <p class="card-text" id="weather-description">Sunny</p>
             </div>
-            <div class="col-3">
+            <div class="col">
               <img src="" alt="sunny" class="weatherEmoji" id="icon" />
             </div>
-            <div class="col-3">
+            <div class="col">
               <strong class="mainTemp" id="current-temp"></strong>
               <a href="#" class="active" id="F"> °F</a>
               <span class="unit">|</span
